# mvs-udp-server

./: CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile  README.md  settings.ini  vcpkg.json
.github/: docker-deploy.yml
.github/workflows/: release-lib.yml
examples/: CMakeLists.txt  wrapper.cpp
include/: compression.h  message_types.h  rollback_server.h  serialization.h  threadSafeMap.h
src/: compression.cpp  compression.rs  ffi.rs  lib.rs  main.cpp  main.rs  message_handler.rs  rollback_server.cpp  serialization.cpp  serializer.rs
src/message_types/: client_messages.rs  mod.rs  server_messages.rs
src/models/: game_match.rs  mod.rs  player.rs
