[package]
name = "mvsi_p2p_rollback_server"
version = "0.1.0"
edition = "2021"

[lib]
name = "mvsi_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.98"
byteorder = "1.5.0"
bytes = "1.10.1"
colog = "1.3.0"
colored = "3.0.0"
log = "0.4.27"
once_cell = "1.21.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0", features = ["full", "net"] }
